--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 *.i*86
 *.x86_64
 *.hex
+*.pd_darwin
 
 # Debug files
 *.dSYM/
@@ -50,4 +51,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
+*/xcuserdata/*
