--- a/makefile.raspberry
+++ b/makefile.raspberry
@@ -13,12 +13,12 @@ samplorpd : slm1.o linkedlist.o samplorpd~.pd_linux
 
 .SUFFIXES: .pd_linux
 
-LINUXCFLAGS = -DPD -O2 -funroll-loops -fomit-frame-pointer \
+LINUXCFLAGS = -DPD -O2  -std=gnu99 -funroll-loops -fomit-frame-pointer \
     -Wall -W -Wshadow -Wstrict-prototypes \
-    -Wno-unused -Wno-parentheses -Wno-switch
+    -Wno-unused -Wno-unused-parameter -Wno-parentheses -Wno-switch
 __APPLE__=True
-#LINUXINCLUDE =  -I../../src
-LINUXINCLUDE = -I/Applications/Pd-0.48-1.app/Contents/Resources/src
+LINUXINCLUDE =  -I../pd-0.51-1/src
+#LINUXINCLUDE = -I/Applications/Pd-0.48-1.app/Contents/Resources/src
 
 .c.pd_linux:
 	cc $(LINUXCFLAGS) $(LINUXINCLUDE) -o $*.o -c $*.c
