--- a/makefile.raspberry
+++ b/makefile.raspberry
@@ -13,7 +13,7 @@ samplorpd : slm1.o linkedlist.o samplorpd~.pd_linux
 
 .SUFFIXES: .pd_linux
 
-LINUXCFLAGS = -DPD -O2  -std=gnu99 -funroll-loops -fomit-frame-pointer \
+LINUXCFLAGS = -DPD -O2  -std=gnu99  -funroll-loops -fomit-frame-pointer \
     -Wall -W -Wshadow -Wstrict-prototypes \
     -Wno-unused -Wno-unused-parameter -Wno-parentheses -Wno-switch
 __APPLE__=True
@@ -21,9 +21,9 @@ LINUXINCLUDE =  -I../pd-0.51-1/src
 #LINUXINCLUDE = -I/Applications/Pd-0.48-1.app/Contents/Resources/src
 
 .c.pd_linux:
-	cc $(LINUXCFLAGS) $(LINUXINCLUDE) -o $*.o -c $*.c
-	ld -export_dynamic  -shared -o $*.pd_linux $*.o linkedlist.o slm1.o -lc -lm
-	strip --strip-unneeded $*.pd_linux
+	gcc $(LINUXCFLAGS) $(LINUXINCLUDE) -o $*.o -c $*.c
+	ld -export_dynamic  -shared -o $*.pd_linux $*.o linkedlist.o slm1.o -L /usr/lib/gcc/arm-linux-gnueabihf/4.9.2 -lgcc -lc -lm 
+#	strip --strip-unneeded $*.pd_linux
 	rm $*.o
 
 # ----------------------- Mac OSX -----------------------
