add method to store loop points in a hash table

--- a/samplor.kg_NoFlext/makefile
+++ b/samplor.kg_NoFlext/makefile
@@ -16,9 +16,10 @@ LINUXCFLAGS = -DPD -O2 -funroll-loops -fomit-frame-pointer \
     -Wno-unused -Wno-parentheses -Wno-switch
 
 #LINUXINCLUDE =  -I../../src
-LINUXINCLUDE = -I/Applications/Pd-0.51-4.app/Contents/Resources/src -I/usr/include/libxml2
+LINUXINCLUDE = -I/Applications/Pd-0.51-4.app/Contents/Resources/src -I/usr/include/libxml2 \
+	-I/usr/local/opt/libxml2/include
 
-
+  
 # ----------------------- Mac OSX -----------------------
 
 pd_darwin: obj1.pd_darwin obj2.pd_darwin \
@@ -34,8 +35,14 @@ DARWINCFLAGS = -DPD -O2 -Wall -W -Wshadow -Wstrict-prototypes \
 
 .c.pd_darwin:
 	cc $(DARWINCFLAGS) $(LINUXINCLUDE) -o $*.o -c $*.c
-	cc -bundle -undefined suppress -flat_namespace -o $*.pd_darwin $*.o
+	cc -bundle -undefined suppress -flat_namespace -L/usr/local/opt/libxml2/lib -o $*.pd_darwin $*.o
 	rm -f $*.o
 
 install:
 	cp samplorkg.pd_darwin /Applications/Pd-0.51-4.app/Contents/Resources/extra
+
+install_lib:
+	cp samplorkg.pd_darwin /Users/lemouton/Projets/Co/Stockhausen/Mantra/mantra2019-pd_48/lib
+
+run:
+	/Applications/Pd-0.51-4.app/Contents/MacOS/Pd samplork.help.pd
